--- a/FilmeTeca/package.json
+++ b/FilmeTeca/package.json
@@ -20,6 +20,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^1.0.7",
+    "sass": "^1.50.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
   }
