--- a/FilmeTeca/package.json
+++ b/FilmeTeca/package.json
@@ -8,11 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.6.4",
+    "@mui/styled-engine-sc": "^5.6.1",
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
+    "react-simple-star-rating": "^4.0.5",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
