--- a/FilmeTeca/package.json
+++ b/FilmeTeca/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@mui/material": "^5.6.4",
     "@mui/styled-engine-sc": "^5.6.1",
+    "@types/react-modal": "^3.13.1",
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-simple-star-rating": "^4.0.5",
     "react-star-ratings": "^2.3.0",
