--- a/FilmeTeca/package.json
+++ b/FilmeTeca/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/material": "^5.6.4",
     "@mui/styled-engine-sc": "^5.6.1",
     "@types/react-modal": "^3.13.1",
